# wikitack

./: .gitignore  Makefile  QUICK_FIX_LOGIN.md  README.md  RESTART_BACKEND.md  SECRET_KEY_EXPLAINED.md  SETUP_OAUTH_NOW.md  podman-compose.backend.yml  podman-compose.db.yml  podman-compose.frontend.yml  podman-compose.prod.yml  podman-compose.yml  wikitack.postman_collection.json
backend/: .env.example  API_SUMMARY.md  DATABASE_RESET.md  Dockerfile  pyproject.toml  reset_db.py  reset_db.sql  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 41c63ebcf2cd_add_unique_constraint_for_workspace_slug.py  79d79b3aa603_add_workspaces_and_workspace_members.py  9b2d3e4e8f3c_add_page_sections.py  c4f0c020069a_initial_tables.py  e66563560e30_initial_schema.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  example_router.py.template  pages.py  revisions.py  spaces.py  tags.py  users.py  workspaces.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  ddl.sql  dml.sql  session.py
backend/app/models/: __init__.py  base.py  page.py  page_section.py  page_tag.py  revision.py  space.py  tag.py  user.py  workspace.py  workspace_member.py
backend/app/schemas/: __init__.py  auth.py  page.py  page_section.py  revision.py  space.py  tag.py  user.py  workspace.py
frontend/: .dockerignore  .env.container  .gitignore  Dockerfile  README.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CreateSpaceModal.tsx  ProtectedRoute.tsx  WikiContent.tsx  WikiHeader.tsx  WikiSidebar.tsx
frontend/src/types/: wiki.ts
(+11 files in other folders)
